--- a/tests/unit/cassettes/test_directory_verbose_yes.yaml
+++ b/tests/unit/cassettes/test_directory_verbose_yes.yaml
@@ -9,23 +9,25 @@ interactions:
         Connection:
           - keep-alive
         User-Agent:
-          - pygitguardian/1.5.0 (Linux;py3.10.6) ggshield
+          - pygitguardian/1.6.0 (Linux;py3.10.6) ggshield
       method: GET
-      uri: https://api.gitguardian.com/v1/health
+      uri: https://api.gitguardian.com/v1/metadata
     response:
       body:
-        string: '{"detail":"Valid API key."}'
+        string: '{"version":"v2.30.2","preferences":{"marketplaces__aws_product_url":"http://aws.amazon.com/marketplace/pp/prodview-mrmulzykamba6","on_premise__restrict_signup":true,"on_premise__is_email_server_configured":true,"on_premise__default_sso_config_api_id":null,"public_api__ggshield_auth_flow_enabled":true,"general__onboarding_segmentation_v1_enabled":true},"secret_scan_preferences":{"maximum_documents_per_scan":20,"maximum_document_size":1048576}}'
       headers:
         access-control-expose-headers:
           - X-App-Version
         allow:
           - GET, HEAD, OPTIONS
         content-length:
-          - '27'
+          - '446'
         content-type:
           - application/json
+        cross-origin-opener-policy:
+          - same-origin
         date:
-          - Mon, 06 Feb 2023 10:55:59 GMT
+          - Mon, 22 May 2023 12:29:03 GMT
         referrer-policy:
           - strict-origin-when-cross-origin
         server:
@@ -35,17 +37,17 @@ interactions:
         vary:
           - Cookie
         x-app-version:
-          - v2.22.2
+          - v2.30.2
         x-content-type-options:
           - nosniff
           - nosniff
         x-envoy-upstream-service-time:
-          - '9'
+          - '27'
         x-frame-options:
           - DENY
           - SAMEORIGIN
         x-secrets-engine-version:
-          - 2.83.0
+          - 2.89.0
         x-xss-protection:
           - 1; mode=block
       status:
@@ -53,10 +55,10 @@ interactions:
         message: OK
   - request:
       body:
-        '[{"filename": "/tmp/tmpynkveevh/file1", "document": "This is a file with
-        no secrets."}, {"filename": "/tmp/tmpynkveevh/dir/subdir/file4", "document":
-        "This is a file with no secrets."}, {"filename": "/tmp/tmpynkveevh/dir/file2",
-        "document": "This is a file with no secrets."}, {"filename": "/tmp/tmpynkveevh/dir/subdir/file3",
+        '[{"filename": "/tmp/tmp0tjp4jff/dir/subdir/file4", "document": "This is
+        a file with no secrets."}, {"filename": "/tmp/tmp0tjp4jff/dir/file2", "document":
+        "This is a file with no secrets."}, {"filename": "/tmp/tmp0tjp4jff/dir/subdir/file3",
+        "document": "This is a file with no secrets."}, {"filename": "/tmp/tmp0tjp4jff/file1",
         "document": "This is a file with no secrets."}]'
       headers:
         Accept:
@@ -70,7 +72,7 @@ interactions:
         Content-Type:
           - application/json
         GGShield-Command-Id:
-          - 96f89e8f-74e2-4d00-8d2e-4c9960b3384e
+          - dafa6644-c7d9-4d98-a9af-788710719f65
         GGShield-Command-Path:
           - cli secret scan path
         GGShield-OS-Name:
@@ -80,9 +82,9 @@ interactions:
         GGShield-Python-Version:
           - 3.10.6
         GGShield-Version:
-          - 1.14.2
+          - 1.15.1
         User-Agent:
-          - pygitguardian/1.5.0 (Linux;py3.10.6) ggshield
+          - pygitguardian/1.6.0 (Linux;py3.10.6) ggshield
         mode:
           - path
       method: POST
@@ -104,8 +106,10 @@ interactions:
           - '429'
         content-type:
           - application/json
+        cross-origin-opener-policy:
+          - same-origin
         date:
-          - Mon, 06 Feb 2023 10:55:59 GMT
+          - Mon, 22 May 2023 12:29:04 GMT
         referrer-policy:
           - strict-origin-when-cross-origin
         server:
@@ -115,17 +119,17 @@ interactions:
         vary:
           - Cookie
         x-app-version:
-          - v2.22.2
+          - v2.30.2
         x-content-type-options:
           - nosniff
           - nosniff
         x-envoy-upstream-service-time:
-          - '47'
+          - '55'
         x-frame-options:
           - DENY
           - SAMEORIGIN
         x-secrets-engine-version:
-          - 2.83.0
+          - 2.89.0
         x-xss-protection:
           - 1; mode=block
       status:
