--- a/Pipfile
+++ b/Pipfile
@@ -4,19 +4,8 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [packages]
+# Do not add dependencies here, but list them in the setup.py instead
 ggshield = { editable = true, path = "." }
-
-# Keep this section in sync with the setup(install_requires=) argument in setup.py
-appdirs = ">=1.4.4,<1.5.0"
-charset-normalizer = ">=2.1.1,<2.2.0"
-click = ">=8.1,<8.2"
-marshmallow = ">=3.18.0,<3.19.0"
-marshmallow-dataclass = ">=8.5.8,<8.6.0"
-oauthlib = ">=3.2.1,<3.3.0"
-pygitguardian = ">=1.5.0,<1.6.0"
-python-dotenv = ">=0.21.0,<0.22.0"
-pyyaml = ">=6.0,<6.1"
-rich = ">=12.5.1,<12.6.0"
 
 [dev-packages]
 black = "==22.3.0"
@@ -27,7 +16,7 @@ flake8-quotes = "*"
 ipdb = "*"
 mypy = "==0.961"
 pre-commit = "*"
-pytest = "*"
+pytest = "7.2.1" # pinning because of conflicting dependencies with exceptiongroup 
 pytest-mock = "*"
 pytest-socket = "*"
 pytest-voluptuous = "*"
