--- a/Pipfile
+++ b/Pipfile
@@ -29,5 +29,11 @@ types-oauthlib = "*"
 typing-extensions = "*"
 
 vcrpy = "*"
+
+# Pin urllib3 until https://github.com/kevin1024/vcrpy/issues/688 is fixed
+# When you remove this, don't forget to also remove the urllib3 hack in
+# .github/workflow/main.yml
+urllib3 = "<2"
+
 pyfakefs = ">=5.2.0"
 scriv = { version = "*", extras = ["toml"] }
